# medical-research-skills

./: .gitignore  ACCEPTANCE_CRITERIA.md  AGENT_RUNTIME_AND_WORKFLOW.md  ARCHITECTURE.md  DEPLOYMENT_BLUEPRINT.md  EVIDENCE_POLICY.md  EXECUTION_ARCHITECTURE.md  FINAL_IMPLEMENTATION_PLAN.md  FINAL_REPORT_SPEC.md  GEMINI.md  IMPLEMENTATION_PLAN.md  MANIFEST.md  MIGRATION_GUIDE.md  README.md  README_FINAL.md  VERSION.md  agent-skills.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/: citation-network-explorer.md  citation-verification.md  clinical-question-formulation.md  drug-research.md  emerging-evidence-research.md  evidence-appraisal.md  evidence-extraction.md  evidence-source-selection.md  evidence-synthesis.md  fulltext-retrieval.md  guideline-research.md  literature-search.md  medical-safety-guardrail.md  research-orchestrator.md
.cursor/: rules.md
.cursor/rules/: citation-network-explorer.mdc  citation-verification.mdc  clinical-question-formulation.mdc  drug-research.mdc  emerging-evidence-research.mdc  evidence-appraisal.mdc  evidence-extraction.mdc  (+7 more)
.gemini/: rules.md
.github/: copilot-instructions.md
contracts/: core-contracts.yaml  evidence-governance-contracts.yaml  execution-contracts.yaml  research-engine-contracts.yaml  research-run-contracts.yaml
execution/: DEDUPLICATION_AND_IDENTITY.md  PROVIDER_SELECTION_POLICY.md
scripts/: build-agent-configs.py
tests/: evidence-governance-test-cases.md  execution-tooling-test-cases.md  foundation-test-cases.md  research-engine-test-cases.md  test_agent_config.py  test_contracts_and_execution.py
(+25 files in other folders)
