[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-research-skills"
version = "0.5.0"
description = "Composable skill system for AI-assisted medical research and evidence synthesis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cuong Pham", email = "cuongpt083@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "medical-research",
    "evidence-synthesis",
    "literature-review",
    "skills",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/cuongpt083/medical-research-skills"
Repository = "https://github.com/cuongpt083/medical-research-skills"

[tool.hatch.build.targets.wheel]
packages = ["execution"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
